# SimpleProxy-V2

./: .gitignore  CMakeLists.txt  README.md  config.yml
src/: headfile.h  main.cpp
src/Global/: config.c  config.cpp  config.h  config.hpp
src/Handle/: Callback.cpp  Callback.hpp
src/Log/: Log.c  Log.cpp  Log.h  Log.hpp
src/ProtocolServer/: nSocket.c  nSocket.h  nTls.c  nTls.h
src/Threadpool/: ThreadpoolAutoCtrlByTime.cpp  ThreadpoolAutoCtrlByTime.hpp  ThreadpoolSimple.cpp  ThreadpoolSimple.hpp
